<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layered_waves_haikei__2_"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:onClick="hiden_key2"
    >

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="hiden_key1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="hiden_key"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text"
                style="@style/text_view_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_massege"
                />

            <EditText
                android:id="@+id/editTextTextPersonName"
                style="@style/edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_edi"
                android:hint="@string/number"
                android:inputType="phone"
                />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                style="@style/edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="272dp"
                android:background="@drawable/custom_edi"
                android:hint="@string/message"
                android:inputType="textMultiLine"
                android:maxLines="10"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                />

            <Button
                android:id="@+id/sendmessage"
                style="@style/button_layout"
                android:background="@drawable/custom_edi"
                android:enabled="false"
                android:onClick="send"
                android:text="@string/Send"
                />

            <Button
                android:id="@+id/button3"
                style="@style/button_layout"
                android:layout_width="match_parent"
                android:background="@drawable/custom_edi"
                android:onClick="ceariat"
                android:text="@string/Create_qr"
                />

            <Button
                android:id="@+id/button4"
                style="@style/button_layout"
                android:background="@drawable/custom_edi"
                android:onClick="URL"
                android:text="@string/creatr_url" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>